--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
 
       <!-- Education -->
-      <div class="main" id="sign-up">
+      <div class="main" id="education">
         <div class="main__container">
             <div class="main__content">
                 <h1></h1>
