--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="main__content">
                 <h1></h1>
                 <h2>Professional Summary</h2>
-                <p>All of my 10+ years of work history has culminated to my pursuit of front-end development.</p>
+                <p>I'm a web developer with 3 live websites. Pretty cool huh?</p>
                 <button class="main__btn"><a href="#">Home</a></button>
             </div>
         </div>
