--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="main__content">
                 <h1></h1>
                 <h2>Professional Summary</h2>
-                <p>I'm a web developer with 3 live websites. Pretty cool huh?</p>
+                <p>What can I say? I'm a web developer. Surprize! I'm also an athlete — which turns out to be a great balance. I'm left-handed, and my least favorite food is coleslaw, although I'm still recovering from eating a tomato thinking it was apple.</p>
                 <button class="main__btn"><a href="#">Home</a></button>
             </div>
         </div>
