--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="hero__heading">
                 RESU<span>ME</span>
             </h1>
-            <p class="hero__description">I am adaptive technology for the only living planet</p>
+            <p class="hero__description">I am adaptive technology for the only living planet.</p>
         </div>
      </div>
 
