--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="main__content">
                 <h1></h1>
                 <h2>Professional Summary</h2>
-                <p>I'm a web developer. I'm also an athlete—which turns out to be a great balance. I'm left-handed and my least favorite food is coleslaw. Also, I'm from Waynesboro, Virginia.</p>
+                <p>I'm a web developer from Waynesboro, Virginia. I'm also an athlete—which turns out to be a great balance. I'm left-handed and my least favorite food is coleslaw.</p>
                 <button class="main__btn"><a href="#">Home</a></button>
             </div>
         </div>
