Revise professional summary text for clarity

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="main__content">
                 <h1></h1>
                 <h2>Professional Summary</h2>
-                <p>I'm not a web developer, but I develop webs. I'm the Spiderman from Waynesboro, Virginia and it's Mawyer like lawyer. I'm left-handed and my least favorite food is coleslaw.</p>
+                <p>I'm not a web developer, but I develop webs: I'm Spiderman. From Waynesboro, Virginia and it's Mawyer like lawyer. I'm left-handed and my least favorite food is coleslaw.</p>
                 <button class="main__btn"><a href="#">Home</a></button>
             </div>
         </div>
