Change hero description in index.html
Updated the hero description text to reflect a new message.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1 class="hero__heading">
                 RESU<span>ME</span>
             </h1>
-            <p class="hero__description">I am adaptive technology for the only living planet.</p>
+            <p class="hero__description">I am the sun. The things of this world are given life through my attention. My fate is that which grows tallest. But I am the sun, so I will still be here.</p>
         </div>
      </div>
 
