--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <h2><br>
-                    Warehouse Worker<br>
+                    Fulfillment Specialist<br>
                     (Blue Ridge Beverage)</h2><br>
                 <p><u><i>6/2024 - 12/2024: Waynesboro, VA</i></u><br>
                     <ul>
@@ -97,7 +97,7 @@
             <div class="services__card">
                 <h2><br>
                     <br>
-                    Inventory Manager<br>
+                    Supply Chain Inventory Manager<br>
                     (Target Distribution Center)</h2><br>
                 <p><u><i>7/2017 - 2/2020: Stuarts Draft, VA</i></u><br>
                     <ul>
@@ -111,7 +111,7 @@
             <div class="services__card">
                 <h2><br>
                     <br>
-                    Front Desk Host<br>
+                    Reception Operations Specialist<br>
                     (Waynesboro YMCA)</h2><br>
                 <p><u><i>6/2015 - 7/2017: Waynesboro, VA</i></u><br>
                     <ul>
