Update job titles in work history section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="services__wrapper">
             <div class="services__card">
                 <h2><br>
-                    Fulfillment Specialist<br>
+                    Fulfillment Maestro<br>
                     (Blue Ridge Beverage)</h2><br>
                 <p><u><i>6/2024 - 12/2024: Waynesboro, VA</i></u><br>
                     <ul>
@@ -83,7 +83,7 @@
             </div>
             <div class="services__card">
                 <h2><br>
-                    Logistic Specialist<br>
+                    Logistics Specialist<br>
                     (United States Navy)</h2><br>
                 <p><u><i>12/2020 - 12/2023: San Diego, CA</u></i><br>
                     <ul>
@@ -112,7 +112,7 @@
             <div class="services__card">
                 <h2><br>
                     <br>
-                    Reception Operations Specialist<br>
+                    Reception Operations Strategist<br>
                     (Waynesboro YMCA)</h2><br>
                 <p><u><i>6/2015 - 7/2017: Waynesboro, VA</i></u><br>
                     <ul>
