Revise inventory management descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     (Blue Ridge Beverage)</h2><br>
                 <p><u><i>6/2024 - 12/2024: Waynesboro, VA</i></u><br>
                     <ul>
-                        <li>Leveraged computer systems to accurately track inventory levels, update stock locations, and generate shipping documentation, ensuring seamless warehouse operations.</li><br>
-                        <li>Safely operated forklifts and warehouse machinery to efficiently load, unload, and transport materials in compliance with safety standards.</li><br>
-                        <li>Initiated and developed a color-coded inventory system, enhancing organizational efficiency and streamlining team workflows.</li>
+                        <li>Commanded digital inventory systems to track stock, update locations, and generate shipping manifests, maintaining flawless operational flow.</li><br>
+                        <li>Operated forklifts and warehouse machinery with precision, orchestrating material movement while upholding strict safety discipline.</li><br> 
+                        <li>Engineered a color-coded inventory system, optimizing organizational efficiency and elevating team workflow performance.</li>
                     </ul>
                 </p>
             </div>
