Revise experience descriptions for clarity and impact

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     (United States Navy)</h2><br>
                 <p><u><i>12/2020 - 12/2023: San Diego, CA</u></i><br>
                     <ul>
-                        <li>Served as Duty Section Leader at Naval Aviation School, ensuring compliance with inspection standards.</li><br>
-                        <li>Successfully completed Air Traffic Control training, demonstrating strong technical and communication skills.</li><br>
-                        <li>Voluntarily trained peers to improve physical readiness, supporting successful completion of the annual Physical Fitness Assessment.</li><br>
-                        <li>Competed as a member of the All-Navy Wrestling team.</li>
+                        <li>Led a Duty Section at Naval Aviation School, enforcing strict compliance with inspection and operational standards.</li><br>
+                        <li>Completed Air Traffic Control training, mastering critical technical systems and high-stakes communication protocols.</li><br>
+                        <li>Mentored peers in physical readiness, driving team success in the annual Physical Fitness Assessment.</li><br>
+                        <li>Competed on the All-Navy Wrestling Team, demonstrating elite discipline, strategy, and resilience.</li>
                     </ul>
                 </p>
             </div>
