Revise job responsibilities for clarity and impact
Updated bullet points to enhance clarity and impact.

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                     (Target Distribution Center)</h2><br>
                 <p><u><i>7/2017 - 2/2020: Stuarts Draft, VA</i></u><br>
                     <ul>
-                        <li>Successfully trained over 20 new hires through comprehensive on-the-job training and knowledge assessments, fostering a skilled and efficient workforce.</li><br>
-                        <li>Conducted quality control inspections on more than 75,000 products, ensuring compliance with OSHA guidelines by filtering items prior to retail distribution.</li><br>
-                        <li>Processed over 500,000 products for retail display, contributing to streamlined supply chain operations and inventory accuracy.</li><br>
+                        <li>Mentored and trained 20+ new hires through rigorous on-the-job instruction and assessments, cultivating a highly skilled, efficient workforce.</li><br>
+                        <li>Executed quality control inspections on 75,000+ products, enforcing OSHA compliance and preemptively filtering items before retail distribution.</li><br>
+                        <li>Processed over 500,000 products for retail display, driving precision in supply chain operations and maintaining flawless inventory accuracy.</li>                    
                     </ul>
                 </p>
             </div>
