Refine bullet points for clarity and impact

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                     (Waynesboro YMCA)</h2><br>
                 <p><u><i>6/2015 - 7/2017: Waynesboro, VA</i></u><br>
                     <ul>
-                        <li>Facilitated communication with supervisors during large-scale events hosting over 200 attendees, ensuring smooth operations and guest satisfaction.</li><br>
-                        <li>Managed over 5,000 inbound calls, providing scheduling information, updating account statuses, and directing customers to appropriate programs.</li><br>
-                        <li>Proactively contacted over a dozen customers quarterly regarding outstanding balances, contributing to improved account management and revenue collection.</li><br>
+                        <li>Orchestrated communication with supervisors during large-scale events of 200+ attendees, ensuring flawless operations and elevated guest satisfaction.</li><br>
+                        <li>Managed 5,000+ inbound calls, delivering scheduling, account updates, and precise customer direction across programs.</li><br>
+                        <li>Proactively engaged a dozen+ customers quarterly regarding outstanding balances, optimizing account management and boosting revenue collection.</li>
                     </ul>
                 </p>
             </div>
