Revise professional summary in index.html
Updated the professional summary with a new description.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
             <div class="main__content">
                 <h1></h1>
                 <h2>Professional Summary</h2>
-                <p>I'm not a web developer, but I'm Spiderman. From Waynesboro, Virginia and it's Mawyer like lawyer. I'm left-handed and my least favorite food is coleslaw.<br>
-                Founder and CEO, Origin: Boredom ©</p>
+                <p>Not a web developer, but built like Spiderman. From Waynesboro, 
+                    Virginia, and it's Mawyer like lidocan(light-a-can).br>
+                    Founder and CEO, Origin: Boredom ©</p>
                 <button class="main__btn"><a href="#">Home</a></button>
             </div>
         </div>
