--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h1></h1>
                 <h2>Professional Summary</h2>
                 <p>Not a web developer, but built like Spiderman. From Waynesboro, 
-                    Virginia, and it's Mawyer like lidocan(light-a-can).br>
+                    Virginia, and it's Mawyer like lidocan(light-a-can).<br>
                     Founder and CEO, Origin: Boredom ©</p>
                 <button class="main__btn"><a href="#">Home</a></button>
             </div>
